--- a/.settings/org.eclipse.php.core.prefs
+++ b/.settings/org.eclipse.php.core.prefs
@@ -1,3 +1,3 @@
-#Thu Jul 10 10:45:01 BRT 2014
 eclipse.preferences.version=1
-include_path=0;/tele
+include_path=0;/skeleton
+use_asp_tags_as_php=false
